--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,32 +19,38 @@
   <!-- <p-panel header="Login"> -->
   <div class='logo'><a href="#"><img src="../assets/method-draw-image.svg" /></a></div>
   <div class="login-block">
-    <form name="form" (ngSubmit)="f.form.valid && signIn()" #f="ngForm" novalidate>
-    <div class="ui-g ui-fluid">
-      <div class="ui-g-12 ui-md-12">
-        <div class="ui-inputgroup form-group">
-          <span class="ui-inputgroup-addon"><i class="fa fa-user"></i></span>
-          <input type="email" pInputText placeholder="Username" name='username' class='form-control' [(ngModel)]='userprofile.username' required/>
-          <!-- <div *ngIf="f.submitted && username.invalid" class="invalid-feedback">
-              <div *ngIf="username.errors.required">First Name is required</div>
-          </div> -->
+    <form [formGroup]="userform" (ngSubmit)="signIn()">
+      <div class="ui-g ui-fluid">
+        <div class="ui-g-12 ui-md-12">
+          <div class="ui-inputgroup form-group">
+            <span class="ui-inputgroup-addon"><i class="fa fa-user"></i></span>
+            <input type="email" pInputText placeholder="Username" formControlName='username' class='form-control'
+              [(ngModel)]='userprofile.username' />
+          </div>
+          <div>
+            <p-message severity="error"
+              [text]="userform.controls['username'].errors['required'] ? 'Username is required' : userform.controls['username'].errors['pattern'] ? 'Enter valid email address' : ''"
+              *ngIf="!userform.controls['username'].valid&&userform.controls['username'].dirty"></p-message>
+          </div>
+        </div>
+        <div class="ui-g-12 ui-md-12">
+          <div class="ui-inputgroup form-group">
+            <span class="ui-inputgroup-addon"><i class="fa fa-key"></i></span>
+            <input type="password" pInputText placeholder="Password" formControlName='password' class='form-control'
+              [(ngModel)]='userprofile.password' />
+          </div>
+          <div>
+            <p-message severity="error"
+              [text]="userform.controls['password'].errors['required'] ? 'Password is required' : userform.controls['password'].errors['minlength'] ? 'Must be longer than 6 characters' : ''"
+              *ngIf="!userform.controls['password'].valid&&userform.controls['password'].dirty"></p-message>
+          </div>
+        </div>
+        <div class="ui-g-3 ui-md-3 ui-md-offset-9 ui-sm-12">
+          <button pButton type="submit" class="ui-button-raised" label='Login' style='float: right;'
+            [disabled]="!userform.valid"></button>
         </div>
       </div>
-      <div class="ui-g-12 ui-md-12">
-        <div class="ui-inputgroup form-group">
-          <span class="ui-inputgroup-addon"><i class="fa fa-key"></i></span>
-          <input type="password" pInputText placeholder="Password"  name='password' class='form-control' [(ngModel)]='userprofile.password' required />
-          <!-- <div *ngIf="f.submitted && password.invalid" class="invalid-feedback">
-              <div *ngIf="password.errors.required">First Name is required</div>
-          </div> -->
-        </div>
-      </div>
-      <div class="ui-g-3 ui-md-3 ui-md-offset-9 ui-sm-12">
-        <button pButton type="submit" class="ui-button-raised" label='Login' style='float: right;'
-         ></button>
-      </div>
-    </div>
-  </form>
+    </form>
   </div>
   <!-- </p-panel> -->
 </div>
