--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -119,6 +119,10 @@
     }
   }
 
+  #dropdowndata::after{
+    display: none;
+  }
+
   .searchlist {
     margin-top: 25px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
