--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,14 +69,21 @@
       <p-table [value]="recordsArray" #Table [loading]="loading" [lazy]="true" (onLazyLoad)="loadLazy($event)" [totalRecords]="count" [responsive]="true" [scrollable]="true" [paginator]="true" [rows]="limit" >
         <ng-template pTemplate="header">
           <tr>
-            <th *ngFor="let header of displayTableHeader"  [pSortableColumn]="header">{{header}}
+            <th *ngFor="let header of displayTableHeader"  [pSortableColumn]="header">{{header | titlecase}}
                 <p-sortIcon [field]="header"></p-sortIcon>
             </th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-device>
-          <tr >
-            <td *ngFor="let header of displayTableHeader">{{device[header]}}</td>
+          <tr>
+            <td *ngFor="let header of displayTableHeader">
+              <div *ngIf="header.split('.').shift()!=='openfda'">
+                  {{device[header]}} 
+              </div>
+              <div *ngIf="header.split('.').shift()==='openfda'">
+                  {{device['openfda'][header.split(".").pop()]}}
+              </div>
+            </td>
           </tr>
         </ng-template>
       </p-table>
