--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,7 +41,7 @@
           </div>
           <div>
             <p-message severity="error"
-              [text]="userform.controls['password'].errors['required'] ? 'Password is required' : userform.controls['password'].errors['minlength'] ? 'Must be longer than 6 characters' : ''"
+              [text]="userform.controls['password'].errors['required'] ? 'Password is required' : userform.controls['password'].errors['minlength'] ? 'Must be 6 characters' : ''"
               *ngIf="!userform.controls['password'].valid&&userform.controls['password'].dirty"></p-message>
           </div>
         </div>
