Added multi search field functionality

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,13 +21,13 @@
       <p style="padding-left:10px;">Select zero or more search fields to make search easier.</p>
     </div>
     <div class='p-col-12'>
-      <ngb-tabset>
+      <ngb-tabset (tabChange)="onTabChange($event)">
         <ngb-tab title="Simple Search">
           <ng-template ngbTabContent>
             <div class="p-col-12">
               <div class='p-grid'>
                 <ng-container *ngFor='let field of searchfields; index as i'>
-                  <div class="p-col-4" *ngIf="field.mandatory === 'true'">
+                  <div class="p-col-4" *ngIf="field.mandatory">
                     <div class="ui-g ui-fluid">
                       <div class="ui-g-12">
                         <div class="ui-inputgroup">
@@ -101,39 +101,6 @@
         </ngb-tab>
       </ngb-tabset>
     </div>
-    <!-- <div class="p-col-12">
-      <div class='p-grid'>
-        <div class="p-col-4" *ngFor='let field of searchfields; index as i'>
-          <div class="ui-g ui-fluid">
-            <div class="ui-g-12">
-              <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">
-                  <p-checkbox [(ngModel)]="selectedInputs[i]" binary="false"
-                    (onChange)="selectedInput.value = '';searchablefields[field]='';"></p-checkbox>
-                </span>
-                <input type="text" [disabled]="!selectedInputs[i]" #selectedInput pInputText
-                  placeholder="{{field.name}}" (input)="queryFields($event,field.name)">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="p-col-12">
-      <div class="p-grid">
-        <div class="p-col-4">
-          <label>Number of records per page </label>
-        </div>
-        <div class="p-col-4">
-          <input type="text" pInputText [(ngModel)]=limit>
-        </div>
-        <div class="p-col-4">
-          <button pButton type="button" class="ui-button-raised ui-button-primary" label='Submit' style='float: right;'
-            (click)='getData()'></button>
-        </div>
-      </div>
-
-    </div> -->
     <div class='listview error p-col-12' *ngIf="recordsError">
       <h1>{{recordsError}}</h1>
     </div>
@@ -142,14 +109,9 @@
       <div ngbDropdown class="dropdown">
         <i class="fa fa-columns" title="show/hide columns" id="dropdowndata" ngbDropdownToggle></i>
         <div ngbDropdownMenu aria-labelledby="dropdowndata">
-            <div class="appendHeaderList">
-                  <input type="checkbox" (change)="selectAllColumns($event)" value="selectall" #selectAllHeader>
-                  <button type="button" (click)="resetHeaders()" class="btn btn-link resetDropdownList">Reset</button>
-            </div>
           <a ngbDropdownItem href="#" *ngFor="let header of tableHeader">
             <input type="checkbox" name="headerNames" (change)="updateTableData(header)"
-              [checked]="displayTableHeader.indexOf(header)!==-1" value="{{header}}">{{header}}
-            </a>
+              [checked]="displayTableHeader.indexOf(header)!==-1" value="{{header}}">{{header}}</a>
         </div>
       </div>
 
