--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -126,6 +126,7 @@
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
       border: 1px solid #ccc;
       .nav{
+        margin:15px;
         .nav-item {
           flex: 50%;
           text-align: center;
