reset and select all button changes

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,9 @@
 .topbar {
-    margin: -8px -8px 0px -8px;
+   // margin: -8px -8px 0px -8px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
   
     img {
-      margin: 15px;
+      margin: 10px;
     }
   
     height:60px;
@@ -13,7 +13,8 @@
   .dropbtn {
     color: #fff;
     float: right;
-    margin: 20px;
+    //margin: 20px;
+    margin: 15px;
     font-size: 20px;
   }
   
