--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,77 @@
 <div class='home-container'>
-  <div class='p-grid'>
-    <div class="p-col-4 select1">
-      <h2>Select Regulatory</h2>
-      <p-dropdown [options]="regulatories" (onChange)="getCategories($event.value)" placeholder="Select Regulatory">
-      </p-dropdown>
+    <div class='p-grid'>
+      <div class="p-col-4 select1">
+        <h2>Select Regulatory</h2>
+        <p-dropdown [options]="regulatories" (onChange)="getCategories($event.value)" placeholder="Select Regulatory">
+        </p-dropdown>
+      </div>
+      <div class="p-col-4 select2">
+        <h2>Select Category</h2>
+        <p-dropdown [options]="categories" placeholder="Select Category" (onChange)="getEndpoints($event.value)"
+          [disabled]="!categories.length>0"></p-dropdown>
+      </div>
+      <div class="p-col-4 select3">
+        <h2>Select EndPoint</h2>
+        <p-dropdown [options]="endpoints" placeholder="Select EndPoint" (onChange)="getSearchableFields($event.value)"
+          [disabled]="!endpoints.length>0"></p-dropdown>
+      </div>
     </div>
-    <div class="p-col-4 select2">
-      <h2>Select Category</h2>
-      <p-dropdown [options]="categories" placeholder="Select Category" (onChange)="getEndpoints($event.value)"
-        [disabled]="!categories.length>0"></p-dropdown>
-    </div>
-    <div class="p-col-4 select3">
-      <h2>Select EndPoint</h2>
-      <p-dropdown [options]="endpoints" placeholder="Select EndPoint" (onChange)="getSearchableFields($event.value)"
-        [disabled]="!endpoints.length>0"></p-dropdown>
-    </div>
-  </div>
-  <div class="p-grid searchlist" *ngIf="searchfields.length>0">
-    <div class='p-col-12'>
-      <p style="padding-left:10px;">Select zero or more search fields to make search easier.</p>
-    </div>
-    <div class='p-col-12'>
-      <ngb-tabset (tabChange)="onTabChange($event)">
-        <ngb-tab title="Simple Search">
-          <ng-template ngbTabContent>
-            <div class="p-col-12">
-              <div class='p-grid'>
-                <ng-container *ngFor='let field of searchfields; index as i'>
-                  <div class="p-col-4" *ngIf="field.mandatory">
+    <div class="p-grid searchlist" *ngIf="searchfields.length>0">
+      <div class='p-col-12'>
+        <p style="padding-left:10px;">Select zero or more search fields to make search easier.</p>
+      </div>
+      <div class='p-col-12'>
+        <ngb-tabset (tabChange)="onTabChange($event)">
+          <ngb-tab title="Simple Search">
+            <ng-template ngbTabContent>
+              <div class="p-col-12">
+                <div class='p-grid'>
+                  <ng-container *ngFor='let field of searchfields; index as i'>
+                    <div class="p-col-4" *ngIf="field.mandatory">
+                      <div class="ui-g ui-fluid">
+                        <div class="ui-g-12">
+                          <div class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon">
+                              <p-checkbox [(ngModel)]="selectedInputs[i]" binary="false"
+                                (onChange)="selectedInput.value = '';searchablefields[field.name]='';"></p-checkbox>
+                            </span>
+                            <input type="text" [disabled]="!selectedInputs[i]" #selectedInput pInputText
+                              placeholder="{{field.name}}" (input)="queryFields($event,field.name)">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </ng-container>
+                </div>
+              </div>
+              <div class="p-col-12 separater">
+                <div class="p-grid">
+                  <div class="p-col-4">
+                    <label>Number of records per page </label>
+                  </div>
+                  <div class="p-col-4">
+                    <input type="text" pInputText [(ngModel)]=limit>
+                  </div>
+                  <div class="p-col-4">
+                    <button pButton type="button" class="ui-button-raised ui-button-primary" label='Submit'
+                      style='float: right;' (click)='getData()'></button>
+                  </div>
+                </div>
+  
+              </div>
+            </ng-template>
+          </ngb-tab>
+          <ngb-tab title="Advanced Search">
+            <ng-template ngbTabContent>
+              <div class="p-col-12">
+                <div class='p-grid'>
+                  <div class="p-col-4" *ngFor='let field of searchfields; index as i'>
                     <div class="ui-g ui-fluid">
                       <div class="ui-g-12">
                         <div class="ui-inputgroup">
                           <span class="ui-inputgroup-addon">
                             <p-checkbox [(ngModel)]="selectedInputs[i]" binary="false"
-                              (onChange)="selectedInput.value = '';searchablefields[field.name]='';"></p-checkbox>
+                              (onChange)="selectedInput.value = '';searchablefields[field]='';"></p-checkbox>
                           </span>
                           <input type="text" [disabled]="!selectedInputs[i]" #selectedInput pInputText
                             placeholder="{{field.name}}" (input)="queryFields($event,field.name)">
@@ -41,131 +79,103 @@
                       </div>
                     </div>
                   </div>
-                </ng-container>
-              </div>
-            </div>
-            <div class="p-col-12 separater">
-              <div class="p-grid">
-                <div class="p-col-4">
-                  <label>Number of records per page </label>
-                </div>
-                <div class="p-col-4">
-                  <input type="text" pInputText [(ngModel)]=limit>
-                </div>
-                <div class="p-col-4">
-                  <button pButton type="button" class="ui-button-raised ui-button-primary" label='Submit'
-                    style='float: right;' (click)='getData()'></button>
                 </div>
               </div>
-
-            </div>
-          </ng-template>
-        </ngb-tab>
-        <ngb-tab title="Advanced Search">
-          <ng-template ngbTabContent>
-            <div class="p-col-12">
-              <div class='p-grid'>
-                <div class="p-col-4" *ngFor='let field of searchfields; index as i'>
-                  <div class="ui-g ui-fluid">
-                    <div class="ui-g-12">
-                      <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon">
-                          <p-checkbox [(ngModel)]="selectedInputs[i]" binary="false"
-                            (onChange)="selectedInput.value = '';searchablefields[field]='';"></p-checkbox>
-                        </span>
-                        <input type="text" [disabled]="!selectedInputs[i]" #selectedInput pInputText
-                          placeholder="{{field.name}}" (input)="queryFields($event,field.name)">
-                      </div>
-                    </div>
+              <div class="p-col-12 separater">
+                <div class="p-grid">
+                  <div class="p-col-4">
+                    <label>Number of records per page </label>
+                  </div>
+                  <div class="p-col-4">
+                    <input type="text" pInputText [(ngModel)]=limit>
+                  </div>
+                  <div class="p-col-4">
+                    <button pButton type="button" class="ui-button-raised ui-button-primary" label='Submit'
+                      style='float: right;' (click)='getData()'></button>
                   </div>
                 </div>
+  
               </div>
-            </div>
-            <div class="p-col-12 separater">
-              <div class="p-grid">
-                <div class="p-col-4">
-                  <label>Number of records per page </label>
-                </div>
-                <div class="p-col-4">
-                  <input type="text" pInputText [(ngModel)]=limit>
-                </div>
-                <div class="p-col-4">
-                  <button pButton type="button" class="ui-button-raised ui-button-primary" label='Submit'
-                    style='float: right;' (click)='getData()'></button>
-                </div>
-              </div>
-
-            </div>
-
-          </ng-template>
-        </ngb-tab>
-      </ngb-tabset>
-    </div>
-    <div class='listview error p-col-12' *ngIf="recordsError">
-      <h1>{{recordsError}}</h1>
-    </div>
-    <div class="listview p-col-12" *ngIf="showTable">
-
-      <div ngbDropdown class="dropdown">
-        <i class="fa fa-columns" title="show/hide columns" id="dropdowndata" ngbDropdownToggle></i>
-        <div ngbDropdownMenu aria-labelledby="dropdowndata">
-          <a ngbDropdownItem href="#" *ngFor="let header of tableHeader">
-            <input type="checkbox" name="headerNames" (change)="updateTableData(header)"
-              [checked]="displayTableHeader.indexOf(header)!==-1" value="{{header}}">{{header}}</a>
-        </div>
+  
+            </ng-template>
+          </ngb-tab>
+        </ngb-tabset>
       </div>
-
-      <p-table [value]="recordsArray" #Table [loading]="loading" [lazy]="true" (onLazyLoad)="loadLazy($event)"
-        [totalRecords]="count" [responsive]="true" [scrollable]="true" [paginator]="true" [rows]="limit">
-        <ng-template pTemplate="header">
-          <tr>
-            <th *ngFor="let header of displayTableHeader"  [pSortableColumn]="header">{{header | titlecase}}
-                <p-sortIcon [field]="header"></p-sortIcon>
-            </th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-device>
-          <tr>
-            <td *ngFor="let header of displayTableHeader">
-              <div *ngIf="header.split('.').shift()!=='openfda'">
-                  {{device[header]}} 
-              </div>
-              <div *ngIf="header.split('.').shift()==='openfda'">
-                  {{device['openfda'][header.split(".").pop()]}}
-              </div>
-            </td>
-          </tr>
-        </ng-template>
-      </p-table>
-      <!-- <div class='p-grid listitem' *ngFor='let record of recordsArray'>
-        <div class="p-col-10">
-          <div class="p-grid" *ngFor='let item of record | keyvalue | slice:0:5;'>
-            <div class='p-col-3' style="word-wrap: break-word;">{{item.key}}</div>
-            <div class='p-col-1'>:</div>
-            <div class='p-col-8'>{{item.value}} </div>
+      <div class='listview error p-col-12' *ngIf="recordsError">
+        <h1>{{recordsError}}</h1>
+      </div>
+      <div class="listview p-col-12" *ngIf="showTable">
+  
+        <div ngbDropdown class="dropdown">
+          <i class="fa fa-columns" title="show/hide columns" id="dropdowndata" ngbDropdownToggle></i>
+          <div ngbDropdownMenu aria-labelledby="dropdowndata">
+            <div class="appendHeaderList">
+              <input type="checkbox" (click)="selectAllColumns($event)" value="selectall" #selectAllHeader>
+              <button type="button" (click)="resetHeaders()" class="btn btn-link resetDropdownList">Reset</button>
+            </div>
+            <a ngbDropdownItem href="#" *ngFor="let header of tableHeader">
+              <input type="checkbox" name="headerNames" (change)="updateTableData(header)"
+                [checked]="displayTableHeader.indexOf(header)!==-1" value="{{header}}">{{header}}</a>
           </div>
         </div>
-        <div class="p-col-2 list-button">
-          <button pButton type="button" class="ui-button ui-button-success ui-button-raised ui-button-primary"
-            (click)="showDialog(record)" label='Full Details'></button>
-        </div>
-      </div> -->
+  
+        <p-table [value]="recordsArray" #Table [loading]="loading" [lazy]="true" (onLazyLoad)="loadLazy($event)"
+          [totalRecords]="count" [responsive]="true" [scrollable]="true" [paginator]="true" [rows]="limit">
+          <ng-template pTemplate="header">
+            <tr>
+              <th *ngFor="let header of displayTableHeader"  [pSortableColumn]="header">{{header | titlecase}}
+                  <p-sortIcon [field]="header"></p-sortIcon>
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-device>
+            <tr>
+              <td *ngFor="let header of displayTableHeader">
+                <div *ngIf="header.split('.').shift()!=='openfda'">
+                    <span *ngIf="typeOfData(device[header])!=='object'">
+                        {{device[header]}}
+                    </span>
+                    <ul *ngIf="typeOfData(device[header])==='object'">
+                        <li *ngFor="let val of device[header]">{{ val | json }}</li>
+                      </ul>
+                </div>
+                <div *ngIf="header.split('.').shift()==='openfda'">
+                     {{device['openfda'][header.split(".").pop()]}}
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+        <!-- <div class='p-grid listitem' *ngFor='let record of recordsArray'>
+          <div class="p-col-10">
+            <div class="p-grid" *ngFor='let item of record | keyvalue | slice:0:5;'>
+              <div class='p-col-3' style="word-wrap: break-word;">{{item.key}}</div>
+              <div class='p-col-1'>:</div>
+              <div class='p-col-8'>{{item.value}} </div>
+            </div>
+          </div>
+          <div class="p-col-2 list-button">
+            <button pButton type="button" class="ui-button ui-button-success ui-button-raised ui-button-primary"
+              (click)="showDialog(record)" label='Full Details'></button>
+          </div>
+        </div> -->
+      </div>
+  
     </div>
-
+  
   </div>
-
-</div>
-<p-dialog header="Full Details" [(visible)]="display" modal="true">
-  <div class='details-grid'>
-    <p-dataTable [value]="transactions">
-      <p-column field="date" header="Date" [sortable]="true"></p-column>
-      <p-column field="label" header="Label" [sortable]="true"></p-column>
-      <p-column field="amount" header="Amount" [sortable]="true"></p-column>
-    </p-dataTable>
-    <!-- <div class='p-grid' *ngFor='let item of modelData | keyvalue'>
-        <div class='p-col-3' style="word-wrap: break-word;" >{{item.key}} </div>
-        <div class='p-col-1'>:</div>
-        <div class='p-col-8'>{{item.value}}</div>
-       </div> -->
-  </div>
-</p-dialog>
+  <p-dialog header="Full Details" [(visible)]="display" modal="true">
+    <div class='details-grid'>
+      <p-dataTable [value]="transactions">
+        <p-column field="date" header="Date" [sortable]="true"></p-column>
+        <p-column field="label" header="Label" [sortable]="true"></p-column>
+        <p-column field="amount" header="Amount" [sortable]="true"></p-column>
+      </p-dataTable>
+      <!-- <div class='p-grid' *ngFor='let item of modelData | keyvalue'>
+          <div class='p-col-3' style="word-wrap: break-word;" >{{item.key}} </div>
+          <div class='p-col-1'>:</div>
+          <div class='p-col-8'>{{item.value}}</div>
+         </div> -->
+    </div>
+  </p-dialog>
+  
