--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -192,4 +192,39 @@
   td{
     word-break: break-all;
   }
+
+  /* overlay spinner for the table*/
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  .loader {
+    position: relative;
+    border: 7px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 7px solid #3498db;
+    width: 50px;
+    height: 50px;
+    left: 50%;
+    top: 50%;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  #overlay{
+      position: fixed;
+      top:0px;
+      left:0px;
+      width: 100%;
+      height: 100%;
+      background: black;
+      opacity: .5;
+  }
+  .hidden{
+    display: none;
+  }
 }
