--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+.ui-table-scrollable-body {
+    position: unset !important;
+  }
+  .popover{
+      max-width: 700px;
+  }
+  .popover-body {
+      max-height: 300px;
+      overflow-y: auto;
+  }
