--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -207,7 +207,7 @@
     position: relative;
     border: 7px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 7px solid #3498db;
+    border-top: 7px solid gray;
     width: 50px;
     height: 50px;
     left: 50%;
