--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@
       max-height: 300px;
       overflow-y: auto;
   }
+  #drop-down-list > .dropdown-menu.show {
+    max-height: 500px;
+    overflow-y: auto;
+  }
