login error validation

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -21,6 +21,9 @@
   .dropdown {
     float:right;
     position: relative;
+    a:hover{
+      text-decoration: none;
+    }
   }
   
   .dropdown-content {
