--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -13,6 +13,13 @@
     .fa {
       color: #02126a;
     }
+    .error
+    {
+      color: red;
+      text-align:center;
+      font-weight:bold;
+    }
+    max-width:530px;
   }
   .logo{
     text-align:center;
