--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,3 @@
-<!-- <div class="login-container">
-  <div class="ui-g ui-fluid">
-    <div class="ui-g-7 ui-md-7">
-      <div class="ui-inputgroup">
-        <span class="ui-inputgroup-addon"><i class="fa fa-user"></i></span>
-        <input type="text" pInputText placeholder="Username">
-      </div>
-      </div>
-      <div class="ui-g-7 ui-md-7">
-        <div class="ui-inputgroup">
-          <span class="ui-inputgroup-addon"><i class="fa fa-key"></i></span>
-          <input type="text" pInputText placeholder="Password">
-        </div>
-      </div>
-    </div> -->
 
 
 <div class='login-container'>
@@ -49,6 +34,7 @@
           <button pButton type="submit" class="ui-button-raised" label='Login' style='float: right;'
             [disabled]="!userform.valid"></button>
         </div>
+        <div class="ui-g-12 ui-md-12 error" *ngIf="loginError"><p> {{loginError}}</p></div>
       </div>
     </form>
   </div>
